--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,5 @@
 @import 'reset.css';
 @import 'global.css';
 @import 'navigation.css';
-@import 'footer.css'
+@import 'footer.css';
+@import 'login.css';
