--- a/css/profile.css
+++ b/css/profile.css
@@ -48,6 +48,17 @@
     width:152px;
     height: 152px;
     border-radius: 50%;
+    border-radius: 50%;
+    animation: 3s rotate-avatar infinite linear;
+}
+
+@keyframes rotate-avatar{
+    from{
+        transform: rotate(0turn);
+    }
+    to{
+        transform: rotate(1turn)
+    }
 }
 
 .profile__name,
@@ -102,4 +113,54 @@
 
 .profile-picture__number:first-child{
     margin-right: 20px;
+}
+
+
+#cog{
+    transition: all .5s ease-in-out;
+}
+
+#cog:hover{
+    transform: rotate(1turn);
+}
+
+.profile__name{
+    animation: .6s popIn ease-out forwards;
+    opacity: 0;
+}
+
+.profile__numbers{
+    animation: .6s popIn ease-out forwards;
+    opacity: 0;
+    animation-delay: .6s;
+}
+
+.profile__bio{
+    animation: .6s popIn ease-out forwards;
+    opacity: 0;
+    animation-delay: 1.2s;
+}
+
+@keyframes popIn{
+    from{
+        transform: translateY(-20px) scale(.8);
+        opacity: 0;
+    }
+    to{
+        transform:none;
+        opacity: 1;
+    }
+}
+
+.fa-heart{
+    animation:bump .6s infinite linear;
+}
+
+@keyframes bump{
+    to{
+        transform: scale(.8);
+    }
+    from{
+        transform: none;
+    }
 }
