--- a/css/profile.css
+++ b/css/profile.css
@@ -124,6 +124,7 @@
     transform: rotate(1turn);
 }
 
+/*
 .profile__name{
     animation: .6s popIn ease-out forwards;
     opacity: 0;
@@ -140,7 +141,9 @@
     opacity: 0;
     animation-delay: 1.2s;
 }
+*/
 
+/*
 @keyframes popIn{
     from{
         transform: translateY(-20px) scale(.8);
@@ -151,6 +154,7 @@
         opacity: 1;
     }
 }
+*/
 
 .fa-heart{
     animation:bump .6s infinite linear;
