--- a/css/profile.css
+++ b/css/profile.css
@@ -24,6 +24,7 @@
     margin-right:20px;
     font-size: 32px;
     font-weight: 300;
+
 }
 
 .profile__button{
@@ -48,11 +49,10 @@
     width:152px;
     height: 152px;
     border-radius: 50%;
-    border-radius: 50%;
-    animation: 3s rotate-avatar infinite linear;
+    animation: 3s potato infinite linear;
 }
 
-@keyframes rotate-avatar{
+@keyframes potato{
     from{
         transform: rotate(0turn);
     }
@@ -81,21 +81,19 @@
 }
 
 .profile-picture{
-    width: 293px;
-    height: 293px;
+    width:32%;
     display: block;
     position: relative;
 }
 
 .profile-picture__picture{
-   width: 293px;
-   height: 293px;
+   width: 100%;
 }
 
 .profile-picture__overlay{
     background-color: rgba(0,0,0,0.3);
     width: 293px;
-    height: 293px;
+    height: 100%;
     position: absolute;
     top:0;
     left:0;
@@ -115,6 +113,10 @@
     margin-right: 20px;
 }
 
+.profile__pictures{
+    display: flex;
+    justify-content: space-between;
+}
 
 #cog{
     transition: all .5s ease-in-out;
@@ -124,27 +126,22 @@
     transform: rotate(1turn);
 }
 
-/*
-.profile__name{
+/*.profile__name{
     animation: .6s popIn ease-out forwards;
     opacity: 0;
 }
-
 .profile__numbers{
     animation: .6s popIn ease-out forwards;
     opacity: 0;
     animation-delay: .6s;
 }
-
 .profile__bio{
     animation: .6s popIn ease-out forwards;
     opacity: 0;
     animation-delay: 1.2s;
-}
-*/
+}*/
 
-/*
-@keyframes popIn{
+/*@keyframes popIn{
     from{
         transform: translateY(-20px) scale(.8);
         opacity: 0;
@@ -153,8 +150,7 @@
         transform:none;
         opacity: 1;
     }
-}
-*/
+}*/
 
 .fa-heart{
     animation:bump .6s infinite linear;
