Added a pop-up and fixed some minor things
Also added beautiful fade-in effect

--- a/css/global.css
+++ b/css/global.css
@@ -1,18 +1,33 @@
 body{
-	background-color: #FAFAFA;
-	font-size:16px;
-	padding-top:calc(80px + 60px);
-	font-family:'Open Sans', sans-serif;
+    background-color: #FAFAFA;
+    font-size: 16px;
+    padding-top: calc(80px + 60px);
+    font-family: 'Open Sans', sans-serif;
+}
+
+main{
+    animation: .7s popIn linear;
+}
+
+@keyframes popIn{
+    from{
+        transform: translateY(12px);
+        opacity: 0;
+    }
+    to{
+        transform: none;
+        opacity: 1;
+    }
 }
 
 a{
-	text-decoration: none;
+    text-decoration: none;
 }
 
-.input:focus{
-	outline:none;
+input:focus{
+    outline: none;
 }
 
 .u-fat-text{
-	font-weight:600;
+    font-weight: 600;
 }
