--- a/css/profile.css
+++ b/css/profile.css
@@ -84,15 +84,17 @@
     width:32%;
     display: block;
     position: relative;
+    margin-bottom:17px;
 }
 
 .profile-picture__picture{
-   width: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .profile-picture__overlay{
     background-color: rgba(0,0,0,0.3);
-    width: 293px;
+    width: 100%;
     height: 100%;
     position: absolute;
     top:0;
@@ -116,6 +118,7 @@
 .profile__pictures{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 #cog{
@@ -163,4 +166,47 @@
     from{
         transform: none;
     }
+}
+
+.popUp{
+    position: fixed;
+    top:0;
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 100%;
+    z-index:999;
+    display: none;
+}
+
+.popUp__container{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 100%;
+    width: 100%;
+}
+
+.popUp i {
+    color:white;
+    position: absolute;
+    right:10px;
+    top:10px;
+    cursor: pointer;
+}
+
+.popUp__button{
+    display: block;
+    background-color: white;
+    width:450px;
+    text-align: center;
+    padding:20px 0;
+    color:black;
+}
+
+.popUp__button:first-child{
+    border-bottom:1px solid rgba(0,0,0,.0975);
+}
+
+.popUp__button:hover{
+    background-color: #efefef;
 }
